
-------------------------------------------------------------------------------

Mon Jun 16 21:05:11 CEST 2003
(Kim)

Corrected some property change event handling bugs.

-------------------------------------------------------------------------------

Sat Jun 21 22:44:32 CEST 2003
(Kim)

Fix mem leak and possible segv introduced last time.

Create ENL_MSG atom early (as was probably intended), fixes problem with
receiving client messages with message_type None (+ cleanups).

-------------------------------------------------------------------------------

Sat Jul 12 07:31:04 CEST 2003
(Kim)

Enable showing window layer using eesh (patch from BAM <solnul@gmx.de>).

kde.c cleanups: Remove some unused functions, make local functions static.

Minor tooltip thingy (preparing to enable avoiding (un)mapping of unused bubbles).

Remove some obsolete stuff doing nothing (mode.showicons, ShowIcons, HideIcons,
HandlePager, external_pager_window).

Bring back the maintenance menu.

config.c cosmetics: Make local functions static.

events.c cosmetics: Make local functions static.

ewmh.c: Shut up indent.


-------------------------------------------------------------------------------

Sat Jul 12 12:01:04 CEST 2003
(Kim)

Make XID stuff local to x.c.

Do SaveSet ops (only) in ICCCM functions.

Trivial cleanups of ICCCM_Adopt... functions.

Remove som redundant DesktopRemoveEwin()'s.

Fix problem with losing control over windows being deiconified (+cleanups).

Avoid calling StackDesktops() before configuration has been read.


-------------------------------------------------------------------------------

Sat Jul 12 17:09:47 CEST 2003
(Kim)

Ganymede theme: Fix some directory permissions.
ShinyMetal theme: Remove .pager.cfg.swp.

Only one ..._WM_CHECK window.
Remove _NET_WM_VERSION (not defined in spec).
Added ENLIGHTENMENT_VERSION property to root window.

Added possibility to configure not to use fnlib (configure --without-fnlib).

No global var should be named "id".